--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue-sweetalert2": "^5.0.2",
+    "vue3-apexcharts": "^1.4.1",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
